--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ajay Boro",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
