--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "dotenv": "^16.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
